@@ -1,6 +1,5 @@
 package org.folio.inventory.dataimport.handlers.actions;
 
-import io.vertx.core.CompositeFuture;
 import io.vertx.core.Future;
 import io.vertx.core.Promise;
 import io.vertx.core.json.Json;
@@ -46,6 +45,7 @@ import static org.folio.ActionProfile.FolioRecord.HOLDINGS;
 import static org.folio.ActionProfile.FolioRecord.MARC_BIBLIOGRAPHIC;
 import static org.folio.DataImportEventTypes.DI_INVENTORY_HOLDING_UPDATED;
 import static org.folio.inventory.dataimport.handlers.actions.CreateItemEventHandler.getItemFromJson;
+import static org.folio.inventory.dataimport.handlers.matching.util.EventHandlingUtil.OKAPI_REQUEST_ID;
 import static org.folio.inventory.dataimport.handlers.matching.util.EventHandlingUtil.PAYLOAD_USER_ID;
 import static org.folio.inventory.dataimport.handlers.matching.util.EventHandlingUtil.constructContext;
 import static org.folio.inventory.dataimport.util.LoggerUtil.INCOMING_RECORD_ID;
@@ -90,22 +90,23 @@ public class UpdateHoldingEventHandler implements EventHandler {
   public CompletableFuture<DataImportEventPayload> handle(DataImportEventPayload dataImportEventPayload) {
     logParametersEventHandler(LOGGER, dataImportEventPayload);
     CompletableFuture<DataImportEventPayload> future = new CompletableFuture<>();
+    String jobExecutionId = dataImportEventPayload.getJobExecutionId();
     try {
       dataImportEventPayload.setEventType(DI_INVENTORY_HOLDING_UPDATED.value());
 
       if (dataImportEventPayload.getContext() == null
         || isEmpty(dataImportEventPayload.getContext().get(HOLDINGS.value()))
         || isEmpty(dataImportEventPayload.getContext().get(MARC_BIBLIOGRAPHIC.value()))) {
-        LOGGER.warn("handle:: Can`t update Holding entity context: {}", dataImportEventPayload.getContext());
+        LOGGER.warn("handle:: Can`t update Holding entity context: {} jobExecutionId: {}", dataImportEventPayload.getContext(), jobExecutionId);
         throw new EventProcessingException(CONTEXT_EMPTY_ERROR_MESSAGE);
       }
       if (dataImportEventPayload.getCurrentNode().getChildSnapshotWrappers().isEmpty()) {
-        LOGGER.warn("handle:: " + ACTION_HAS_NO_MAPPING_MSG);
+        LOGGER.warn("handle:: " + ACTION_HAS_NO_MAPPING_MSG + " jobExecutionId: {}", jobExecutionId);
         return CompletableFuture.failedFuture(new EventProcessingException(ACTION_HAS_NO_MAPPING_MSG));
       }
 
       LOGGER.info("handle:: Processing UpdateHoldingEventHandler starting with jobExecutionId: {} and incomingRecordId: {}.",
-        dataImportEventPayload.getJobExecutionId(), dataImportEventPayload.getContext().get(INCOMING_RECORD_ID));
+        jobExecutionId, dataImportEventPayload.getContext().get(INCOMING_RECORD_ID));
       List<PartialError> errors = new ArrayList<>();
 
       validateRequiredHoldingsFields(dataImportEventPayload, errors);
@@ -115,8 +116,7 @@ public class UpdateHoldingEventHandler implements EventHandler {
         return future;
       }
       Context context = constructContext(dataImportEventPayload.getTenant(), dataImportEventPayload.getToken(), dataImportEventPayload.getOkapiUrl(),
-        dataImportEventPayload.getContext().get(PAYLOAD_USER_ID));
-      String jobExecutionId = dataImportEventPayload.getJobExecutionId();
+        dataImportEventPayload.getContext().get(PAYLOAD_USER_ID), dataImportEventPayload.getContext().get(OKAPI_REQUEST_ID));
       String recordId = dataImportEventPayload.getContext().get(RECORD_ID_HEADER);
       String chunkId = dataImportEventPayload.getContext().get(CHUNK_ID_HEADER);
       LOGGER.info("handle:: Update holding with jobExecutionId: {} , recordId: {} , chunkId: {}", jobExecutionId, recordId, chunkId);
@@ -131,7 +131,7 @@ public class UpdateHoldingEventHandler implements EventHandler {
           MappingManager.map(dataImportEventPayload, new MappingContext().withMappingParameters(mappingParameters));
 
           List<HoldingsRecord> updatedHoldingsRecord = new ArrayList<>();
-          List<Future> updatedHoldingsRecordFutures = new ArrayList<>();
+          List<Future<?>> updatedHoldingsRecordFutures = new ArrayList<>();
           isPayloadConstructed = false;
           convertHoldings(dataImportEventPayload);
           List<HoldingsRecord> list = List.of(Json.decodeValue(dataImportEventPayload.getContext().get(HOLDINGS.value()), HoldingsRecord[].class));
@@ -148,7 +148,7 @@ public class UpdateHoldingEventHandler implements EventHandler {
                   updatedHoldingsRecord.add(holding);
                   constructDataImportEventPayload(updatePromise, dataImportEventPayload, list, context, errors);
                 } catch (Exception e) {
-                  LOGGER.warn("handle:: Error updating inventory Holdings by jobExecutionId: '{}'", jobExecutionId, e);
+                  LOGGER.warn("handle:: Error updating inventory Holdings jobExecutionId: '{}' recordId: '{}' chunkId: '{}'", jobExecutionId, recordId, chunkId, e);
                   future.completeExceptionally(e);
                 }
               },
@@ -162,19 +162,38 @@ public class UpdateHoldingEventHandler implements EventHandler {
                 updatePromise.complete();
               });
           }
-          CompositeFuture.all(updatedHoldingsRecordFutures)
+          Future.all(updatedHoldingsRecordFutures)
             .onSuccess(ar -> processResults(dataImportEventPayload, updatedHoldingsRecord, expiredHoldings, future, holdingsRecordCollection, errors))
-            .onFailure(future::completeExceptionally);
+            .onFailure(e -> {
+              LOGGER.warn("handle:: Error in composite future for Holdings update jobExecutionId: '{}' recordId: '{}' chunkId: '{}'", jobExecutionId, recordId, chunkId, e);
+              future.completeExceptionally(e);
+            });
         })
         .onFailure(e -> {
-          LOGGER.warn("handle:: Error updating inventory Holdings by jobExecutionId: '{}'", jobExecutionId, e);
+          LOGGER.warn("handle:: Error updating inventory Holdings by jobExecutionId: '{}' recordId: '{}' chunkId: '{}'", jobExecutionId, recordId, chunkId, e);
           future.completeExceptionally(e);
         });
     } catch (Exception e) {
-      LOGGER.warn("handle:: Failed to update Holdings", e);
+      LOGGER.warn("handle:: Failed to update Holdings jobExecutionId: '{}'", jobExecutionId, e);
       future.completeExceptionally(e);
     }
     return future;
+  }
+
+  private void constructDataImportEventPayload(Promise<Void> promise, DataImportEventPayload dataImportEventPayload, List<HoldingsRecord> holdings, Context context, List<PartialError> errors) {
+    if (!isPayloadConstructed) {
+      isPayloadConstructed = true;
+      HashMap<String, String> payloadContext = dataImportEventPayload.getContext();
+      payloadContext.put(HOLDINGS.value(), Json.encodePrettily(holdings));
+      if (payloadContext.containsKey(ITEM.value())) {
+        ItemCollection itemCollection = storage.getItemCollection(context);
+        updateDataImportEventPayloadItem(promise, dataImportEventPayload, itemCollection, errors);
+      } else {
+        promise.complete();
+      }
+    } else {
+      promise.complete();
+    }
   }
 
   private void processResults(DataImportEventPayload dataImportEventPayload, List<HoldingsRecord> updatedHoldingsRecord, List<HoldingsRecord> expiredHoldings, CompletableFuture<DataImportEventPayload> future, HoldingsRecordCollection holdingsRecordCollection, List<PartialError> errors) {
@@ -251,7 +270,7 @@ public class UpdateHoldingEventHandler implements EventHandler {
       holdingsJsonArray.set(i, new JsonObject().put(HOLDINGS_PATH_FIELD, holdingAsJson));
     }
     dataImportEventPayload.getContext().put(HOLDINGS.value(), holdingsJsonArray.encode());
-    dataImportEventPayload.setCurrentNode(dataImportEventPayload.getCurrentNode().getChildSnapshotWrappers().get(0));
+    dataImportEventPayload.setCurrentNode(dataImportEventPayload.getCurrentNode().getChildSnapshotWrappers().getFirst());
   }
 
   private void processOLError(DataImportEventPayload dataImportEventPayload, CompletableFuture<DataImportEventPayload> future, HoldingsRecordCollection holdingsRecords, List<HoldingsRecord> expiredHoldings, List<PartialError> errors, OlHoldingsAccumulativeResults olAccumulativeResults) {
@@ -301,26 +320,13 @@ public class UpdateHoldingEventHandler implements EventHandler {
     });
   }
 
-  private void constructDataImportEventPayload(Promise<Void> promise, DataImportEventPayload dataImportEventPayload, List<HoldingsRecord> holdings, Context context, List<PartialError> errors) {
-    if (!isPayloadConstructed) {
-      isPayloadConstructed = true;
-      HashMap<String, String> payloadContext = dataImportEventPayload.getContext();
-      payloadContext.put(HOLDINGS.value(), Json.encodePrettily(holdings));
-      if (payloadContext.containsKey(ITEM.value())) {
-        ItemCollection itemCollection = storage.getItemCollection(context);
-        updateDataImportEventPayloadItem(promise, dataImportEventPayload, itemCollection, errors);
-      } else {
-        promise.complete();
-      }
-    } else {
-      promise.complete();
-    }
-  }
-
-  private void updateDataImportEventPayloadItem(Promise<Void> promise, DataImportEventPayload dataImportEventPayload, ItemCollection itemCollection, List<PartialError> errors) {
+  private void updateDataImportEventPayloadItem(Promise<Void> promise,
+                                                DataImportEventPayload dataImportEventPayload,
+                                                ItemCollection itemCollection,
+                                                List<PartialError> errors) {
     JsonArray oldItemsAsJson = new JsonArray(dataImportEventPayload.getContext().get(ITEM.value()));
     JsonArray resultedItemsList = new JsonArray();
-    List<Future> updateItemsFutures = new ArrayList<>();
+    List<Future<Void>> updateItemsFutures = new ArrayList<>();
 
     for (int i = 0; i < oldItemsAsJson.size(); i++) {
       Promise<Void> updateItemPromise = Promise.promise();
@@ -342,7 +348,8 @@ public class UpdateHoldingEventHandler implements EventHandler {
         updateItemPromise.complete();
       });
     }
-    CompositeFuture.all(updateItemsFutures)
+
+    Future.all(updateItemsFutures)
       .onComplete(ar -> {
         dataImportEventPayload.getContext().put(ITEM.value(), resultedItemsList.encode());
         promise.complete();
